crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__one_of_discriminator_int.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"oneOf\":[{\"properties\":{\"code\":{\"const\":1},\"data\":{\"type\":\"string\"}},\"required\":[\"code\"],\"type\":\"object\"},{\"properties\":{\"code\":{\"const\":2},\"payload\":{\"type\":\"number\"}},\"required\":[\"code\"],\"type\":\"object\"}]}"
expression: is_valid_body(schema)
---
{
            let __one_of_discriminator = match instance {
                __Value::Object(obj) => {
                    obj.get("code")
                        .and_then(|value| {
                            value
                                .as_i64()
                                .or_else(|| {
                                    value
                                        .as_f64()
                                        .and_then(|float| {
                                            (float.fract() == 0.0
                                                && float >= -9_223_372_036_854_775_808.0_f64
                                                && float < 9_223_372_036_854_775_808.0_f64)
                                                .then_some(float as i64)
                                        })
                                })
                        })
                }
                _ => None,
            };
            let mut matched = (matches!(__one_of_discriminator, Some(1i64))
                && { is_branch_valid_0(instance) });
            (if (matches!(__one_of_discriminator, Some(2i64))
                && { is_branch_valid_1(instance) })
            {
                if matched {
                    false
                } else {
                    matched = true;
                    true
                }
            } else {
                true
            }) && matched
        }
