crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__one_of_no_discriminator.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"oneOf\":[{\"type\":\"string\"},{\"type\":\"number\"}]}"
expression: is_valid_body(schema)
---
{
            let mut matched = is_branch_valid_0(instance);
            (if is_branch_valid_1(instance) {
                if matched {
                    false
                } else {
                    matched = true;
                    true
                }
            } else {
                true
            }) && matched
        }
